# libsyspower

./: CMakeLists.txt  README
include/: syspower.h
lib/: core.c
tools/: syspowernap.c  syspowersupply.c  syspowerwakesrc.c
