cmake_minimum_required (VERSION 2.6)
project (libsyspower)

add_library(syspower lib/core.c)
target_link_libraries(syspower PRIVATE udev)
target_compile_options(syspower PRIVATE -Werror -Wall -Wextra)
target_include_directories(syspower PUBLIC include)

add_executable(syspowernap tools/syspowernap.c)
target_include_directories(syspowernap PRIVATE include)
target_link_libraries(syspowernap PRIVATE syspower)
target_compile_options(syspowernap PRIVATE -Werror -Wall -Wextra)
install(TARGETS syspowernap DESTINATION sbin)

add_executable(syspowerwakesrc tools/syspowerwakesrc.c)
target_include_directories(syspowerwakesrc PRIVATE include)
target_link_libraries(syspowerwakesrc PRIVATE syspower)
target_compile_options(syspowerwakesrc PRIVATE -Werror -Wall -Wextra)
install(TARGETS syspowerwakesrc DESTINATION sbin)

add_executable(syspowersupply tools/syspowersupply.c)
target_include_directories(syspowersupply PRIVATE include)
target_link_libraries(syspowersupply PRIVATE syspower)
target_compile_options(syspowersupply PRIVATE -Werror -Wall -Wextra)
install(TARGETS syspowersupply DESTINATION sbin)
